# sound-change

./: CHANGELOG.md  LICENSE  README.md  sound-change.cabal
src/Language/: Change.hs
src/Language/Change/: Quote.hs
test/Language/: ChangeSpec.hs
test/Language/Change/: QuoteSpec.hs
