cabal-version:      2.4
name:               sound-change
version:            0.1.0.0
author:             Owen Bechtel
maintainer:         ombspring@gmail.com

-- category: 
-- synopsis: 

-- description: 

homepage:           https://github.com/UnaryPlus/sound-change
bug-reports:        https://github.com/UnaryPlus/sound-change/issues
license:            MIT
license-file:       LICENSE
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/UnaryPlus/sound-change.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
    Language.Change,
    Language.Change.Quote

  build-depends:
    base,
    containers,
    syb,
    template-haskell,
    megaparsec,
    parser-combinators,
    




