cabal-version:      2.4
name:               sound-change
version:            0.1.0.0
author:             Owen Bechtel
maintainer:         ombspring@gmail.com

-- category: 
-- synopsis: 

-- description: 

homepage:           https://github.com/UnaryPlus/sound-change
bug-reports:        https://github.com/UnaryPlus/sound-change/issues
license:            MIT
license-file:       LICENSE
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/UnaryPlus/sound-change.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
    Language.Change,
    Language.Change.Quote

  build-depends:
    base,
    containers,
    syb,
    template-haskell,
    megaparsec,
    parser-combinators,

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test 
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          Spec.hs

  other-modules:
    Language.ChangeSpec,
    Language.Change.QuoteSpec

  build-depends:
    base, hspec, sound-change

  build-tool-depends:
    hspec-discover:hspec-discover
    




